# clearing_simulation

./: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  app.py  clearing_simulation.py  pyproject.toml  review.md
.devcontainer/: devcontainer.json
boltzmann_machine/: config.py
boltzmann_machine/data/: synthetic_generator.py
boltzmann_machine/output/run_1/: history.json
boltzmann_machine/utils/: __init__.py  create_prices.py
configs/: default.json
docs/: clearing_simulation_onboarding.tex
models/run_1/: history.json  metrics.json
src/clearing_simulation/: __init__.py  __main__.py  ccp.py  clearing_member.py  client.py  config.py  data_utils.py  dataset.py  device.py  encoding.py  model_loader.py  qubo.py  risk.py  runner.py  scenario.py  simulation.py  utils.py
visualizer/: CLIENT_DEBUG_CALCULATOR.md  LINE_BY_LINE_TABLES.md  README.md  TRADE_BY_TRADE_ANALYSIS.md  app.py  generate_sample_data.py  simulation_output.json  test_calculations.py  test_calculations_standalone.py
